bk_ida/gccida/g0/df_ref_record
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1326:69: error: must use 'enum' tag to refer to type 'df_ref_type'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                    ^
                                                                    enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1326:91: error: must use 'enum' tag to refer to type 'df_ref_flags'
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                                                                          ^
                                                                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1334:4: error: expected ';' after expression
rtx rega; // [rsp+20h] [rbp-20h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1334:5: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rtx rega; // [rsp+20h] [rbp-20h] 
    ^~~~
    reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1326:44: note: 'reg' declared here
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1339:1: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rega = reg; 
^~~~
reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1326:44: note: 'reg' declared here
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1343:72: error: invalid suffix 'xmode' on integer constant
&& ( mode_size[*( ( unsigned __int8 *)reg + 2)] < mode_size[*(short *)0xmode] 
                                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1346:14: error: expected expression
loc = ( rtx *)reg->fld; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1347:1: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rega = reg->fld[0].rtx; 
^~~~
reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1326:44: note: 'reg' declared here
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1349:17: error: use of undeclared identifier 'rega'
if ( *( _WORD *)rega == 63 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1350:7: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rtx = rega->fld[0].rtx; 
      ^~~~
      reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1326:44: note: 'reg' declared here
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1352:7: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rtx = rega; 
      ^~~~
      reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1326:44: note: 'reg' declared here
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1356:24: error: use of undeclared identifier 'rega'; did you mean 'reg'?
df_ref_record_1( df_0, rega, loc, insn, ref_type, ref_flags); 
                       ^~~~
                       reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1326:44: note: 'reg' declared here
void  df_ref_record(  struct df *df_0, rtx reg, rtx *loc, rtx insn, df_ref_type ref_type, df_ref_flags ref_flags) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1365:19: error: use of undeclared identifier 'rega'
if ( *( ( _BYTE *)rega + 2) == 18 ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1372:24: error: use of undeclared identifier 'rega'
else if ( *( ( _BYTE *)rega + 2) == 24 ) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1385:39: error: use of undeclared identifier 'rega'
v9 = mode_size[*( ( unsigned __int8 *)rega + 2)] + v8 - 1; 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1393:47: error: use of undeclared identifier 'rega'
else if ( mode_class_0[*( ( unsigned __int8 *)rega + 2)] == MODE_COMPLEX_INT 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1393:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)rega + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1394:40: error: use of undeclared identifier 'rega'
|| mode_class_0[*( ( unsigned __int8 *)rega + 2)] == MODE_COMPLEX_FLOAT ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/df.c:1394:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)rega + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/df_ref_record/src/obj/df.o] Error 1
